// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxItem /> help renders 1`] = `
<div>
  <input
    id="form-0_mock_6"
    type="checkbox"
    value="100"
  />
  <label
    for="form-0_mock_6"
  >
    Example
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<CheckboxItem /> label renders 1`] = `
<div>
  <input
    id="form-0_mock_3"
    type="checkbox"
    value="100"
  />
  <label
    for="form-0_mock_3"
  >
    Label
  </label>
</div>
`;

exports[`<CheckboxItem /> renders 1`] = `
<div>
  <input
    id="form-0_mock_0"
    type="checkbox"
    value="100"
  />
  <label
    for="form-0_mock_0"
  >
    Example
  </label>
</div>
`;
